remove url from cites

--- a/concuPL.bib
+++ b/concuPL.bib
@@ -488,7 +488,6 @@ language={English}
 	Author = {Y. Bontemps and P. Heymans and P. Schobbens and J.C. Trigaux},
 	Booktitle = {1st Workshop on Software Variability Management for Product Derivation -- Towards Tool Support, SPLCW'04},
 	Pages = {48-58},
-	url = {https://pdfs.semanticscholar.org/ce6f/2d5ee2eed02c9f624412a0a687231b0443d2.pdf},
 	Publisher = {\springer},
 	Title = {Semantics of {FODA} feature diagrams},
 	Year = {2004}}
@@ -846,8 +845,7 @@ language={English}
 	Booktitle = {4th International Workshop on Variability Modelling of Software-Intensive Systems, VaMoS'10},
 	Pages = {37-44},
 	Title = {A Deontic Logical Framework for Modelling Product Families},
-	Year = {2010},
-    url = {http://www.vamos-workshop.net/proceedings/VaMoS_2010_Proceedings.pdf},	
+	Year = {2010}
 	}
 
 @inproceedings{fg08d,
@@ -1435,7 +1433,6 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
 	location = {Nashville, Tennessee},
 	pages = {11--15},
 	numpages = {5},
-	url = {http://doi.acm.org/10.1145/2791060.2791087},
 	doi = {10.1145/2791060.2791087},
 	acmid = {2791087},
 	publisher = {ACM},
@@ -1469,7 +1466,6 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
 	journal   = {CoRR},
 	volume    = {abs/1311.1343},
 	year      = {2013},
-	url       = {http://arxiv.org/abs/1311.1343},
 	timestamp = {Tue, 03 Dec 2013 15:04:21 +0100},
 	biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/CordyHSSGL13},
 	bibsource = {dblp computer science bibliography, http://dblp.org}
@@ -1485,8 +1481,7 @@ author = {R.J. Vanglabbeek and S.A. Smolka and B. Steffen},
 	number="1",
 	pages="153--171",
 	issn="1619-1374",
-	doi="10.1007/s10270-015-0479-8",
-	url="http://dx.doi.org/10.1007/s10270-015-0479-8"
+	doi="10.1007/s10270-015-0479-8"
 }
 
 
