missing testing paragraph

--- a/testing.tex
+++ b/testing.tex
@@ -79,13 +79,12 @@ some features being computed with times between 20 and 38 milliseconds.
 	\caption{Probabilistic analysis for a 1500 features model.}\label{fig:plot:probs:probs}
 \end{figure}
 
-La figura \ref{fig:plot:probs:probs} muestra gráficamente
-la probabilidad de cada característica dentro del modelo
-a medida que este se procesa.
-
-Gracias a esta representación gráfica es posible distinguir
-claramente agrupaciones de características con mayor probabilidad.
-
+Figure \ref{fig:plot:probs:probs} shows graphically
+the probability of each feature in the model.
+Thanks to this representation it is possible to
+identify groups of features with greater probability of
+being inside a valid product and for example test
+more accurately the model features.
 
 \begin{figure}[h]
 	\centering
