Alberto - First approach de la implementacion

--- a/equivalence.tex
+++ b/equivalence.tex
@@ -1,4 +1,4 @@
-\section{Equivalence between the operational and denotational semantics}\label{sec:equivalence}
+\section{Equivalence between the operational and denotational semantics}\label{sec:equivalenceMain}
 We have defined two different semantics for our language:
 the products derived from the operational semantics and the products
 obtained from the denotational semantics. It is important that
