--- a/hiding.tex
+++ b/hiding.tex
@@ -1,5 +1,5 @@
 \section{Hiding sets of features}
-\label{sec:stat:hid}
+\label{sec:stat:hidMain}
 
 The probability of a single feature in a software product line
 is a measure of the occurrences of this feature in the set of
