--- a/introduction.tex
+++ b/introduction.tex
@@ -318,7 +318,9 @@ Some of these works describe models to run statistical analysis over \SPLs, wher
 %
 Cordy et al. focus on testing properties of \SPLs, like reliability, which defines three verification techniques, a probabilistic model checker on each product, on a model range, and testing the behavior relations with other models~\cite{chssgl13}. Other works focus on describing use cases for analyzing the probability of finding features inside valid products~\cite{dpcslsh17}. %An interesting feature is that any of the referenced research articles describe their approaches using multisets.
 
-The rest of the paper is structured as follows. Section \ref{sec:stat:sintax} presents the sintaxis of our approach. Section \ref{sec:stat:oper} describes the operational smantics. In section \ref{sec:stat:consis} we describe the consistence of the probabilistic model. \acomen{Hay que incluir el resto de secciones. No estoy seguro si el orden de las que hay es correcto, algunas están en español.}
+The rest of the paper is structured as follows. Section \ref{sec:stat:sintaxMain} presents our language. Section \ref{sec:equivalenceMain} describes the equivalence between the operational and denotational semantics. In section \ref{sec:stat:hidMain} we describe how the sets of features are hidden. Section~\ref{sec:stat:impl} shows our implementation of the denotational semantics for the probabilistic extension. Finally, section~\ref{section:jstat:concs} presents our conclusions and some future work.
+
+\acomen{He cambiado el nombre de secciones (label) repetidas. Please, check!.}
 
 %%% Local Variables:
 %%% mode: latex
