--- a/syntax.tex
+++ b/syntax.tex
@@ -1,5 +1,5 @@
 \section{$\fodaPAp$: Syntax and Semantics}
-\label{sec:stat:sintax}
+\label{sec:stat:sintaxMain}
 In this section we introduce our language. In addition to provide its syntax, we define an operational semantics and a denotational semantics. In the next section we will show the equivalence between these two semantic frameworks.
 
 \subsection{Syntax and operational semantics}
